Happy with this performance